# ovis-runtime

./: .clang-format  .gitignore  CMakeLists.txt  README.md  generate_module_file.py  module.json
cmake/: ClangFormat.cmake  emscripten.cmake
docs/: boilerplate.md  compilation.md  linking.md  safety.md  syntax.md
include/ovis/: runtime.h  runtime.hpp
include/ovis/runtime/: basic_types.h  canvas.h  continous_storage.h  entity_descriptor.h  error.h  frame.h  input_events.h  job.h  list.h  log.h  resource.h  scene.h  shapes.h  string.h  symbols.h  type.h
src/: basic_types.c  canvas.cpp  continous_storage.cpp  continous_storage.hpp  entity_descriptor.cpp  entity_descriptor.hpp  event_storage.cpp  event_storage.hpp  frame.c  id_list.cpp  id_list.hpp  indexed_component_storage.cpp  indexed_component_storage.hpp  input_events.c  job.cpp  job.hpp  list.c  log.c  resource.cpp  resource.hpp  resource_storage.cpp  resource_storage.hpp  runtime.c  scene.cpp  scene.hpp  scene_component_storage.cpp  scene_component_storage.hpp  scene_components_storage.cpp  scene_components_storage.hpp  scheduler.cpp  scheduler.hpp  shapes.cpp  string.c  type.c  versioned_index_id.hpp
test/: CMakeLists.txt  test_basic_types.cpp  test_id_list.cpp  test_list.cpp  test_module.cpp  test_module.html  test_scene.cpp  test_scheduler.cpp  test_var.cpp
